# lux

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt
include/: lux.h
include/lux/: api.h  bindings.h  codes.h  core.h  debug.h  external.h  gl.h  input.h  math.h  output.h  render.h  tools.h  utils.h
res/: standard.frag  standard.vert
src/bindings/: bindings.c  loader.c  loader_linux.c
src/core/: core.h  lifetime.c  management.c  window_linux.c  window_win32.c
src/debug/: debug.h  emission.c
src/gl/: gl.h  loader.c  loader.h
src/input/: codes.h  codes_linux.c  input.h  query.c  querying.c  querying.h  querying_linux.c  tracking.c  translation_linux.c  translation_win32.c
src/math/: matrix.c  quaternion.c  utility.c  vector.c
src/output/: shader.c  window_linux.c
src/render/: shader.c  window.c
src/tools/: debug.c  debug.h  file_io.c  io.c  logging.c
src/utils/: file.c
tests/: main.c  test_gl.c  test_gl.h
tests/src/: main.c
